# Epsilon-Project

./: Churn_Modelling.csv  README.md  churn.ipynb  main.py  project.rar  pyproject.toml
