[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imblearn>=0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "xgboost>=3.1.2",
]
